# backtest_crew-datalake

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  smoke.yml
docs/: README.md  README_BINANCE.md  overview.md
docs/specs/: catalog_schema.sql  liquidity.md  partitioning.md  schema_levels_daily.parquet.json  schema_m1.parquet.json  schema_m15.parquet.json  schema_m30.parquet.json  schema_m5.parquet.json
docs/usage/: binance_ingest.md  ingest_crypto_m1.md  layout.md  mtf.md  phase-4.md  phase0.md  phase1.md  phase2.md  phase2_aggregates_levels.md  phase3.md  phase3_offline_bridge.md  phase4.md  qc.md  quickstart.md  reader.md  tools.md  troubleshooting.md
src/bridge/backtest_crew/: cli.py  provider.py
src/datalake/: config.py  liquidity_profiles.py  specs.py  validate_layout.py
src/datalake/aggregates/: aggregate.py  cli.py  loader.py
src/datalake/commands/: repair_day.py
src/datalake/ingestors/binance/: __init__.py  ingest_cli.py
src/datalake/ingestors/ibkr/: contracts.py  (+9 more)
src/datalake/levels/: cli.py  or_levels.py
src/datalake/read/: api.py  cli.py  mtf.py  paths.py  reader.py  schemas.py
src/datalake/tools/: __init__.py  gaps.py
src/datalake/utils/: __init__.py
src/tools/: resample_from_m1.py
tests/: test_bridge_smoke.py  test_contracts_and_norm.py  test_ingest_cli_args.py  test_join_mtf_shapes.py  test_phase2_smoke.py  test_phase3_provider_smoke.py  test_read_api.py  test_resample_offline.py  test_specs_smoke.py
tools/: binance_fetch_tail.py  check_day.py  check_mtf.py  fetch_binance_tail_range.py  fill_binance_month.py  offline_demo.ps1  resample_from_m1.py  synth_gen.py
(+4 files in other folders)
